local/logs/project.log
2018-07-31T14:17:41.021Z - normal: Load ~/.CocosCreator/settings.json
2018-07-31T14:17:41.025Z - normal: checking language setting...
2018-07-31T14:17:41.025Z - normal: Language: en
2018-07-31T14:17:41.678Z - success: protocol editor-framework registered
2018-07-31T14:17:41.679Z - success: protocol app registered
2018-07-31T14:17:41.679Z - success: protocol theme registered
2018-07-31T14:17:41.679Z - success: protocol profile registered
2018-07-31T14:17:41.679Z - success: protocol packages registered
2018-07-31T14:17:41.682Z - success: protocol unpack registerred
2018-07-31T14:17:41.682Z - success: protocol disable-commonjs registerred
2018-07-31T14:17:41.801Z - normal: connected!
2018-07-31T14:17:41.806Z - normal: Check project /Users/wangmeili/Documents/workspace/creater/PKGame_creator
2018-07-31T14:17:41.818Z - normal: Initializing Cocos2d
2018-07-31T14:17:42.012Z - normal: Initializing Asset Database
2018-07-31T14:17:42.043Z - success: protocol uuid registerred
2018-07-31T14:17:42.043Z - success: protocol db registerred
2018-07-31T14:17:42.043Z - success: protocol thumbnail registerred
2018-07-31T14:17:42.043Z - normal: Loading editor/builtin packages
2018-07-31T14:17:42.071Z - success: anysdk loaded
2018-07-31T14:17:42.217Z - success: assets loaded
2018-07-31T14:17:42.221Z - success: builder loaded
2018-07-31T14:17:42.227Z - success: hierarchy loaded
2018-07-31T14:17:42.233Z - success: inspector loaded
2018-07-31T14:17:42.235Z - success: keystore loaded
2018-07-31T14:17:42.239Z - success: node-library loaded
2018-07-31T14:17:42.241Z - success: package-asset loaded
2018-07-31T14:17:42.243Z - success: preferences loaded
2018-07-31T14:17:42.248Z - success: project-exporter loaded
2018-07-31T14:17:42.263Z - success: project-importer loaded
2018-07-31T14:17:42.267Z - success: project-settings loaded
2018-07-31T14:17:42.271Z - success: ui-kit loaded
2018-07-31T14:17:42.275Z - success: ui-grid loaded
2018-07-31T14:17:42.280Z - success: scene loaded
2018-07-31T14:17:42.281Z - success: sprite-editor loaded
2018-07-31T14:17:42.287Z - success: store loaded
2018-07-31T14:17:42.293Z - success: timeline loaded
2018-07-31T14:17:42.293Z - normal: Loading builtin packages
2018-07-31T14:17:42.299Z - success: asset-db-debugger loaded
2018-07-31T14:17:42.300Z - success: color-picker loaded
2018-07-31T14:17:42.307Z - success: console loaded
2018-07-31T14:17:42.311Z - success: package-manager loaded
2018-07-31T14:17:42.317Z - success: sdkbox loaded
2018-07-31T14:17:42.322Z - success: tester loaded
2018-07-31T14:17:42.326Z - success: ui-kit-preview-extra loaded
2018-07-31T14:17:42.330Z - success: ui-kit-preview loaded
2018-07-31T14:17:42.333Z - success: ui-tree loaded
2018-07-31T14:17:43.223Z - normal: Initializing project /Users/wangmeili/Documents/workspace/creater/PKGame_creator
2018-07-31T14:17:43.231Z - normal: Loading packages
2018-07-31T14:17:43.248Z - normal: [LuaCPP Support] version 0.3
2018-07-31T14:17:43.249Z - success: creator-luacpp-support loaded
2018-07-31T14:17:43.249Z - normal: Watching packages
2018-07-31T14:17:43.330Z - normal: Run Application
2018-07-31T14:17:44.024Z - success: preview server running at http://localhost:7456
2018-07-31T14:17:48.756Z - normal: 1.6.1
2018-07-31T14:27:58.572Z - warn: Script attached to "state" in scene "bull.fire" is missing or invalid. Detailed information:
Node path: "Canvas/game/state"
Asset url: "db://assets/resources/Scene/bull.fire"
Script UUID: "92710e3a-1340-420b-b7f4-24eba17dbee3"
Class ID: "9271046E0BCC7f0JOuhfb7j"

2018-07-31T14:28:16.338Z - warn: Script attached to "state" is missing or invalid. Detailed information:
Node path: "Canvas/game/state"
Script UUID: "92710e3a-1340-420b-b7f4-24eba17dbee3"
Class ID: "9271046E0BCC7f0JOuhfb7j"

2018-07-31T15:11:04.873Z - failed: [db-task][sync-changes] Failed to import asset /Users/wangmeili/Documents/workspace/creater/PKGame_creator/assets/resources/Script/view/Player.js, message: Compile error: SyntaxError: /Users/wangmeili/Documents/workspace/creater/PKGame_creator/assets/resources/Script/view/Player.js: Unexpected token, expected , (110:4)
  108 |      * @param {*} pType 
  109 |      */
> 110 |     setCartType(pType) {
      |     ^
  111 |         this.spType.node.active = true
  112 |         this.spType.spriteFrame = cartTypeAtlas.getSpriteFrame(pType);
  113 |     },
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3978:12)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
2018-07-31T15:11:09.262Z - warn: Script attached to "state" in scene "bull.fire" is missing or invalid. Detailed information:
Node path: "Canvas/game/state"
Asset url: "db://assets/resources/Scene/bull.fire"
Script UUID: "92710e3a-1340-420b-b7f4-24eba17dbee3"
Class ID: "9271046E0BCC7f0JOuhfb7j"

2018-07-31T15:16:01.411Z - failed: [db-task][sync-changes] Failed to import asset /Users/wangmeili/Documents/workspace/creater/PKGame_creator/assets/resources/Script/view/Player.js, message: Compile error: SyntaxError: /Users/wangmeili/Documents/workspace/creater/PKGame_creator/assets/resources/Script/view/Player.js: Unexpected token (60:28)
  58 |         this.labelScore.string = data.score;
  59 | 
> 60 |         this.setBetNum(data.);
     |                             ^
  61 |         this.spType.node.active = false;
  62 |         this.cardNode.active = false;
  63 |         this.labelWinScore.node.active = false;
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseIdentifier (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4332:10)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3517:30)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
    at Parser.pp$3.parseExprListItem (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4312:16)
2018-07-31T15:44:10.691Z - warn: Script attached to "state" in scene "bull.fire" is missing or invalid. Detailed information:
Node path: "Canvas/game/state"
Asset url: "db://assets/resources/Scene/bull.fire"
Script UUID: "92710e3a-1340-420b-b7f4-24eba17dbee3"
Class ID: "9271046E0BCC7f0JOuhfb7j"

2018-07-31T15:44:47.629Z - warn: Script attached to "state" is missing or invalid. Detailed information:
Node path: "Canvas/game/state"
Script UUID: "92710e3a-1340-420b-b7f4-24eba17dbee3"
Class ID: "9271046E0BCC7f0JOuhfb7j"

